Corrected the header image size issue on ios.

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -31,6 +31,6 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 .px-header-img {
   padding-top: 1px;
-  height: $bar-height - 2;
+  height: 42px;
   padding-bottom: 1px;
 }
